sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: value ^^ is not a member of Boolean
	while (!plusPetitQue(j-1,temp) ^^ j>=1 ) {
                                       ^